# project-2-15

./: .gitignore  CLAUDE.md  LICENSE  README.md  flake.nix  flake1.nix  nginx.nix  package-lock.json  package.json
.docs/: verse-superscript-cursor-bug.md
.github/workflows/: e2e.yml  main.yml  production.yml
.parcel-cache/: data.mdb  lock.mdb
backend/: LICENSE  backend.cabal  cabal.project  flake.nix  local-secrets.json  run.sh
backend/app/: Main.hs
backend/lib/: Altcha.hs  Api.hs  Database.hs  Db.hs  DbHelper.hs  Entities.hs  Entity.hs  EnvFields.hs  LateralLeftJoin.hs  Mail.hs  Orphans.hs  Password.hs  Prelude.hs  SwaggerHelpers.hs  Types.hs  WebsocketServant.hs
backend/lib/Api/: Altcha.hs  Auth.hs  Bible.hs  Document.hs  Errors.hs  GroupStudy.hs  Helpers.hs  Study.hs  User.hs  Websocket.hs
backend/lib/Api/Htmx/: AuthHelper.hs  BlogArticleHistoryOfOutlining.hs  Contribute.hs  DocumentHistory.hs  EmailVerification.hs  Ginger.hs  GroupStudy.hs  Home.hs  LocalTime.js  Login.hs  NotAuthorized.hs  NotFound.hs  PasswordReset.hs  Profile.hs  Server.hs  Signup.hs  Studies.hs  Studies.js  Study.hs
backend/lib/Bible/Esv/: Parser.hs
backend/lib/Emails/: Base.hs  EmailChangeNotification.hs  EmailVerification.hs  PasswordReset.hs  ShareGroupStudy.hs  Welcome.hs
backend/lib/Entities/: Group.hs  User.hs
backend/lib/Entity/: AuthUser.hs  Document.hs  Feature.hs  Group.hs  GroupStudy.hs  Shares.hs  Study.hs  User.hs  UserAssignable.hs
backend/lib/Fields/: Email.hs
backend/lib/Lucid/: Htmx.hs
backend/migrations/: 2023-07-03T04:59:30.sql  2023-07-18T13:55:38.sql  2023-08-10T02:21:56.sql  2023-08-20T04:03:53.sql  2023-08-22T00:26:42.sql  2023-09-16T23:57:44.sql  2023-10-15T02:29:43.sql  2023-10-21T02:35:39.sql  2023-11-12T00:51:24.sql  2024-07-19T02:30:08.sql  2024-08-23T05:02:28.sql  2024-09-21T19:13:49.sql  2026-02-21T00:00:00.sql  2026-02-22T15:00:00.sql
backend/nix/: hix.nix
backend/static/scripts/: clearErrors.js  dialog.js  notification.js  option.js  studyGroup.js
backend/static/styles/: footer.css  header.css  styles.css
backend/static/styles/component/: groupstudy.css  nav.css  newstudy.css
backend/static/styles/editor/: editor.css  toolbar.css
backend/static/styles/pages/: history.css  home.css  login.css  notfound.css  pre-login.css  profile.css  studies.css  study.css
backend/static/styles/utils/: base.css  button.css  checkbox.css  input.css
backend/templates/: base.html  blogArticleHistoryOfOutlining.html  contribute.html  footer.html  home.html  login.html  notAuthorized.html  notFound.html  passwordReset.html  passwordResetToken.html  pre-login-header.html  profile.html  signup.html  studies.html  study-history.html  study.html  styles.css  verifyEmail.html
backend/templates/login/: form.html
backend/templates/passwordReset/: form.html
backend/templates/profile/: featureForm.html  form.html
backend/templates/scripts/: dialog.js  inputs.js  option.js
backend/templates/signup/: checkEmail.html  form.html
backend/templates/study/: createStudyGroup.html  studyGroup.html
designStuff/: types.md
docs/: require-email-verification-plan-26-02-22--15-00.md
e2e/: .gitignore  CLAUDE.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/1_atoms/: auth.ts  editor.ts  global.ts  groupStudyInvitePage.ts  groupStudyPage.ts  history.ts  historyPage.ts  homePage.ts  loginPage.ts  nav.ts  profilePage.ts  resetPasswordPage.ts  signupPage.ts  studies.ts  studiesPage.ts  studyPage.ts
e2e/2_molecules/: acceptGroupStudyInvite.ts  acceptGroupStudyInviteWithExistingDoc.ts  addQuestion.ts  addSection.ts  addStudyBlock.ts  applyBoldToText.ts  applyItalicToText.ts  applyUnderlineToText.ts  cancelDeleteStudy.ts  changeMemberRole.ts  clearFormattingFromText.ts  closeGroupStudyModal.ts  closeNewStudyDialog.ts  createGroupStudy.ts  createGroupStudyWithInvite.ts  createStudy.ts  deleteSection.ts  deleteStudy.ts  disableGroupStudyFeature.ts  enableGroupStudyFeature.ts  getInviteTokenByEmail.ts  goToProfile.ts  goToStudies.ts  insertScripture.ts  inviteMember.ts  login.ts  logout.ts  navigateHomeFromEditor.ts  navigateToHistory.ts  navigateToLoginFromHome.ts  navigateToProfile.ts  navigateToProfileFromEditor.ts  navigateToSignupFromHome.ts  openGroupStudyModal.ts  openStudy.ts  openStudyFromStudiesPage.ts  previewScriptureOnly.ts  redoChange.ts  rejectGroupStudyInvite.ts  removeMember.ts  (+12 more)
e2e/3_organisms/: auth.spec.ts  collab-sync.spec.ts  document-persistence.spec.ts  editor-basic.spec.ts  editor-complex.spec.ts  editor-formatting.spec.ts  editor-scripture.spec.ts  editor-structure.spec.ts  group-study.spec.ts  homepage.spec.ts  invite-lifecycle.spec.ts  navigation.spec.ts  password-reset.spec.ts  profile.spec.ts  signup.spec.ts  studies.spec.ts  version-history.spec.ts
e2e/4_branch_suites/: e2e-testing.json  version-history.json
e2e/fixtures/: appPage.ts  credentials.ts  globalSetup.ts  seed.sql  userFactory.ts
e2e/fixtures/.auth/: user.json  user2.json
e2e/scripts/: check-flaky.mjs  resolve-suite.mjs
e2e/suites/: smoke.json
e2e/types/: atoms.ts  molecules.ts
frontend/: .babelrc  .envrc  flake.nix  james-notes.md  package-lock.json  package.json  projects.toml  tsconfig.json
frontend/src/: GroupStudy.ts  PreviewScripture.tsx  SidebarSections.ts  StudyBlockEditor.ts  Types.tsx  Util.tsx  WebsocketTypes.tsx  createGroupStudy.ts  history.tsx  index.html  index.tsx  styles.module.scss  viewportStabilizer.ts
frontend/src/Editor/: Editor.tsx  OtherCursorPlugin.ts  QuestionHighlightPlugin.ts  QuestionPlugin.ts  Schema.ts  StudyBlockArrowPlugin.ts  default.json  editorUtils.tsx  listPlugin.ts  styles.css  styles.module.css  styles.module.scss  textSchema.ts
frontend/src/Editor2/: Editor.tsx  Schema.ts  default.json  styles.css  styles.module.css  styles.module.scss
frontend/src/EditorOld/: Editor.tsx  default.json  (+1 more)
frontend/typings/: global.d.ts
ops/: Makefile  dev-deploy.sh  email.cert  email.crt  flake.nix  network.nix  prod-deploy.sh
ops/network/: flake.nix  network.nix
ops/secrets/: sshkey  sshkey.pub  test
(+69 files in other folders)
