cabal-version:      3.0
name:               backend
version:            0.1.0.0
homepage:           p215.church
license:            MIT
license-file:       LICENSE
author:             Jonny
maintainer:         jonny@p215.church
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
  ghc-options: -Wall -Werror=missing-fields -Werror=incomplete-uni-patterns

common buildDepends
  build-depends:
    base-noprelude,
    text,
    case-insensitive,
    postgresql-simple,
    beam-core,
    beam-postgres,
    containers,
    unordered-containers,
    relude,
    unliftio,
    unliftio-pool,
    lens,
    generic-lens,
    bytestring,
    aeson,
    deriving-aeson,
    warp,
    wai,
    wai-extra,
    wai-logger,
    openapi3,
    servant-openapi3,
    servant,
    servant-server,
    monad-logger,
    uuid,
    hashable,
    time,
    tz,
    tzdata,
    quic,
    vector,
    cryptonite,
    QuickCheck,
    quickcheck-instances,
    cookie,
    lens-datetime,
    servant-swagger-ui,
    servant-swagger-ui-redoc,
    postgresql-migration,
    email-validate,
    wreq,
    parsec,

  default-extensions:
    OverloadedStrings,
    FlexibleInstances,
    FlexibleContexts,
    TypeSynonymInstances,
    TupleSections,
    DeriveGeneric,
    DeriveFunctor,
    DeriveFoldable,
    DeriveTraversable,
    ScopedTypeVariables,
    DeriveDataTypeable,
    RankNTypes,
    BangPatterns,
    GADTs,
    ConstraintKinds,
    GeneralizedNewtypeDeriving,
    TypeInType,
    PolyKinds,
    TypeFamilies,
    TypeFamilyDependencies,
    FunctionalDependencies,
    MultiParamTypeClasses,
    DerivingStrategies,
    TypeOperators,
    DuplicateRecordFields,
    NoFieldSelectors,
    NamedFieldPuns,
    RecordWildCards,
    LambdaCase,
    TypeApplications,
    InstanceSigs,
    StandaloneDeriving,
    PartialTypeSignatures,
    QuantifiedConstraints,
    DerivingVia,
    DeriveAnyClass,
    OverloadedRecordDot,
    AllowAmbiguousTypes,

library
  import: warnings
  import: buildDepends
  exposed-modules:
    Types,
    Prelude,
    Database,
    DbHelper,
    EnvFields,
    Entity,
    Entity.User,
    Entity.AuthUser,
    Entity.GroupStudy,
    Entity.Document,
    Api,
    Api.Helpers,
    Api.User,
    Api.Bible,
    Api.Auth,
    Api.Errors,
    Api.GroupStudy,
    Api.Document,
    Password,
    SwaggerHelpers,
    Orphans,
    Fields.Email,
    Bible.Esv.Parser


  build-depends:

  hs-source-dirs:   lib
  default-language: GHC2021

executable backend
  import: warnings
  import: buildDepends
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      backend,
      scotty,

  hs-source-dirs:   app
  default-language: GHC2021

test-suite backend-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      backend
