cabal-version:      3.0
name:               backend
version:            0.1.0.0
homepage:           p215.church
license:            MIT
license-file:       LICENSE
author:             Jonny
maintainer:         jonny@p215.church
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
  ./lib/**/*.js


common warnings
  ghc-options: -Wall -Werror=missing-fields -Werror=incomplete-uni-patterns

common buildDepends
  build-depends:
    base-noprelude,
    text,
    case-insensitive,
    postgresql-simple,
    beam-core,
    beam-postgres,
    containers,
    unordered-containers,
    relude,
    unliftio,
    ginger,
    unliftio-pool,
    lens,
    generic-lens,
    bytestring,
    aeson,
    deriving-aeson,
    warp,
    wai,
    wai-extra,
    wai-logger,
    wai-middleware-static,
    openapi3,
    servant-openapi3,
    servant,
    servant-server,
    monad-logger,
    monad-logger-prefix,
    uuid,
    hashable,
    time,
    tz,
    tzdata,
    vector,
    cryptonite,
    QuickCheck,
    quickcheck-instances,
    cookie,
    lens-datetime,
    servant-swagger-ui,
    servant-swagger-ui-redoc,
    postgresql-migration,
    email-validate,
    wreq,
    parsec,
    HaskellNet,
    mime-mail,
    network,
    lucid,
    clay,
    servant-lucid,
    template-haskell,
    file-embed,
    websockets,
    wai-websockets,
    resourcet,
    scotty,
    directory,
    http-types,
    data-default,
    mime-types,
    filepath,
    uri-encode,
    free,



  default-extensions:
    OverloadedStrings,
    FlexibleInstances,
    FlexibleContexts,
    TypeSynonymInstances,
    TupleSections,
    DeriveGeneric,
    DeriveFunctor,
    DeriveFoldable,
    DeriveTraversable,
    ScopedTypeVariables,
    DeriveDataTypeable,
    RankNTypes,
    BangPatterns,
    GADTs,
    ConstraintKinds,
    GeneralizedNewtypeDeriving,
    TypeInType,
    PolyKinds,
    TypeFamilies,
    TypeFamilyDependencies,
    FunctionalDependencies,
    MultiParamTypeClasses,
    DerivingStrategies,
    TypeOperators,
    DuplicateRecordFields,
    NoFieldSelectors,
    NamedFieldPuns,
    RecordWildCards,
    LambdaCase,
    TypeApplications,
    InstanceSigs,
    StandaloneDeriving,
    PartialTypeSignatures,
    QuantifiedConstraints,
    DerivingVia,
    DeriveAnyClass,
    OverloadedRecordDot,
    AllowAmbiguousTypes,
    TemplateHaskell,

library
  import: warnings
  import: buildDepends
  exposed-modules:
    Types,
    Prelude,
    Database,
    DbHelper,
    EnvFields,
    Entity,
    Entity.User,
    Entity.AuthUser,
    Entity.GroupStudy,
    Entity.Shares,
    Entity.Document,
    Api,
    Api.Helpers,
    Api.User,
    Api.Bible,
    Api.Auth,
    Api.Errors,
    Api.GroupStudy,
    Api.Document,
    Api.Websocket,
    Api.Htmx.Studies,
    Api.Htmx.Study,
    Api.Htmx.Login,
    Api.Htmx.Home,
    Api.Htmx.NotFound,
    Api.Htmx.NotAuthorized,
    Api.Htmx.Ginger,
    Api.Htmx.AuthHelper,
    Api.Htmx.Server,
    Password,
    SwaggerHelpers,
    Orphans,
    Mail,
    Fields.Email,
    Bible.Esv.Parser,
    Emails.Base,
    Emails.Welcome,
    Emails.PasswordReset,
    Emails.ShareGroupStudy,
    WebsocketServant,

  build-depends:

  hs-source-dirs:   lib
  default-language: GHC2021

executable backend
  import: warnings
  import: buildDepends
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      backend,

  hs-source-dirs:   app
  default-language: GHC2021

test-suite backend-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  build-depends:
      backend
