cabal-version:      3.0
name:               backend
version:            0.1.0.0
homepage:           p215.church
license:            MIT
license-file:       LICENSE
author:             Jonny
maintainer:         jonny@p215.church
category:           Web
build-type:         Simple
extra-doc-files:    CHANGELOG.md
extra-source-files:
  ./lib/**/*.js


common warnings
  ghc-options: -Wall -Werror=missing-fields -Werror=incomplete-uni-patterns -Wunused-packages

common buildDepends
  build-depends:
    warp,
    postgresql-simple,
    wai,
    wai-extra,
    aeson,
    text,
    unliftio,
    base-noprelude,
    servant-server,



  default-extensions:
    OverloadedStrings,
    FlexibleInstances,
    FlexibleContexts,
    TypeSynonymInstances,
    TupleSections,
    DeriveGeneric,
    DeriveFunctor,
    DeriveFoldable,
    DeriveTraversable,
    ScopedTypeVariables,
    DeriveDataTypeable,
    RankNTypes,
    BangPatterns,
    GADTs,
    ConstraintKinds,
    GeneralizedNewtypeDeriving,
    DataKinds,
    PolyKinds,
    TypeFamilies,
    TypeFamilyDependencies,
    FunctionalDependencies,
    MultiParamTypeClasses,
    DerivingStrategies,
    TypeOperators,
    DuplicateRecordFields,
    NoFieldSelectors,
    NamedFieldPuns,
    RecordWildCards,
    LambdaCase,
    TypeApplications,
    InstanceSigs,
    StandaloneDeriving,
    PartialTypeSignatures,
    QuantifiedConstraints,
    DerivingVia,
    DeriveAnyClass,
    OverloadedRecordDot,
    AllowAmbiguousTypes,
    TemplateHaskell,

library
  import: warnings
  import: buildDepends
  exposed-modules:
    Types,
    Prelude,
    Database,
    DbHelper,
    EnvFields,
    Entity,
    Entity.User,
    Entity.AuthUser,
    Entity.GroupStudy,
    Entity.Shares,
    Entity.Document,
    Entity.Feature,
    Api,
    Api.Helpers,
    Api.Bible,
    Api.Altcha,
    Api.Auth,
    Api.Errors,
    Api.Websocket,
    Api.Htmx.Studies,
    Api.Htmx.Profile,
    Api.Htmx.Study,
    Api.Htmx.GroupStudy,
    Api.Htmx.Login,
    Api.Htmx.Signup,
    Api.Htmx.PasswordReset,
    Api.Htmx.Home,
    Api.Htmx.NotFound,
    Api.Htmx.NotAuthorized,
    Api.Htmx.Ginger,
    Api.Htmx.AuthHelper,
    Api.Htmx.Server,
    Password,
    SwaggerHelpers,
    Orphans,
    Mail,
    Fields.Email,
    Bible.Esv.Parser,
    Emails.Base,
    Emails.Welcome,
    Emails.PasswordReset,
    Emails.ShareGroupStudy,
    WebsocketServant,
    Lucid.Htmx,
    Altcha,

  build-depends:
    HaskellNet,
    HaskellNet-SSL,
    QuickCheck,
    quickcheck-instances,
    bytestring,
    beam-core,
    beam-postgres,
    unordered-containers,
    relude,
    unliftio-pool,
    openapi3,
    servant-openapi3,
    servant,
    uuid,
    time,
    tz,
    vector,
    servant-swagger-ui,
    wreq,
    parsec,
    websockets,
    wai-websockets,
    resourcet,
    scotty,
    network,
    monad-logger,
    monad-logger-prefix,
    mime-mail,
    lucid,
    lens-datetime,
    lens,
    http-types,
    ginger,
    email-validate,
    directory,
    cookie,
    data-default,
    deriving-aeson,
    containers,
    case-insensitive,
    clay,
    wai-middleware-static,
    mtl,
    crypton,
    memory,

  hs-source-dirs:   lib
  default-language: GHC2021

executable backend
  import: warnings
  import: buildDepends
  main-is: Main.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
    backend,
    postgresql-migration,
    generic-lens,

  hs-source-dirs:   app
  default-language: GHC2021

